1 May 2017: Wouter
	- Fix #1259: "--disable-ecdsa" argument overwritten 
	  by "#ifdef SHA256_DIGEST_LENGTH@daemon/remote.c".
	- iana portlist update

26 April 2017: Ralph
	- Implemented trust anchor signaling using key tag query.

26 April 2017: Wouter
	- Based on #1257: check parse limit before t increment in sldns RR
	  string parse routine.

24 April 2017: Wouter
	- unbound-checkconf -o allows query of dnstap config variables.
	  Also unbound-control get_option.  Also for dnscrypt.
	- trunk contains 1.6.3 version number (changes from 1.6.2 back from
	  when the 1.6.2rc1 tag has been created).

21 April 2017: Ralph
	- Fix #1254: clarify ratelimit-{for,below}-domain (from Manu Bretelle).
	- iana portlist update
	
18 April 2017: Ralph
	- Fix #1252: more indentation inconsistencies.
	- Fix #1253: unused variable in edns-subnet/addrtree.c:getbit().

13 April 2017: Ralph
	- Added ECS unit test (from Manu Bretelle).
	- ECS documentation fix (from Manu Bretelle).

13 April 2017: Wouter
	- Fix #1250: inconsistent indentation in services/listen_dnsport.c.
	- tag for 1.6.2rc1
	- (for 1.6.3:) unbound.h exports the shm stats structures.  They use
	  type long long and no ifdefs, and ub_ before the typenames.

12 April 2017: Wouter
	- subnet mem value is available in shm, also when not enabled,
	  to make the struct easier to memmap by other applications,
	  independent of the configuration of unbound.

12 April 2017: Ralph
	- Fix #1247: unbound does not shorten source prefix length when
	  forwarding ECS.
	- Properly check for allocation failure in local_data_find_tag_datas.
	- Fix #1249: unbound doesn't return FORMERR to bogus ECS.
	- Set SHM ECS memory usage to 0 when module not loaded.

11 April 2017: Ralph
	- Display ECS module memory usage.

10 April 2017: Wouter
	- harden-algo-downgrade: no also makes unbound more lenient about
	  digest algorithms in DS records.

10 April 2017: Ralph
	- Remove ECS option after REFUSED answer.