@@ -90,6 +90,7 @@ section "-hidden.postinstall"
 	File "..\unbound-service-install.exe"
 	File "..\unbound-service-remove.exe"
 	File "..\anchor-update.exe"
+	File "..\root.key"
 	File "unbound-control-setup.cmd"
 	File "unbound-website.url"
 	File "..\doc\example.conf"
